crates/plotnik-tests/tests/04-emit/bytecode/binding/bare_supertype_quantified.txt
Q = (program
  (statement)* @s
)
------------------ DIAGNOSTICS -------------------
error: `statement` is a supertype, not a node kind
 --> query.ptk:2:4
  |
2 |   (statement)* @s
  |    ^^^^^^^^^
  |
help: choose the concrete subtypes of `statement` that this query should match
help: the grammar includes `break_statement`, `continue_statement`, `debugger_statement`, `declaration`, `do_statement`, … (15 more)
